--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "name": "ganglion-cli",
   "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "bin": {
+    "ganglion": "bin/ganglion"
+  },
   "scripts": {
     "test": "istanbul cover _mocha -dir $CIRCLE_ARTIFACTS",
     "publish-coverage": "cat $CIRCLE_ARTIFACTS/lcov.info | coveralls"
@@ -11,8 +13,7 @@
     "type": "git",
     "url": "https://github.com/roylines/ganglion-cli.git"
   },
-  "keywords": [
-  ],
+  "keywords": [],
   "author": "Roy Lines <roy@roylines.co.uk> (http://roylines.co.uk)",
   "license": "MIT",
   "devDependencies": {
@@ -22,5 +23,8 @@
     "mocha": "*"
   },
   "dependencies": {
+    "commander": "2.8.1",
+    "ganglion-discovery-aws": "1.0.0",
+    "lodash": "3.7.0"
   }
 }
